--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "wils": "./bin/wils"
   },
   "author": {
-    "name": "Mickey-",
-    "email": "itaofe@gmail.com"
+    "name": "pgl",
+    "email": "15870842969@163.com"
   },
   "contributors": [],
   "repository": {
