feat: publish npm/org

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wils",
+  "name": "pgl-wils",
   "description": "frontend workflow integration solution for qiji",
   "version": "1.1.0",
   "homepage": "http://code.youxu.cc/fe/wils",
